syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";
import "google/protobuf/timestamp.proto";

package volume;

service VolumeService {
  rpc GetOrCreateVolume(GetOrCreateVolumeRequest) returns (GetOrCreateVolumeResponse) {}
  rpc ListVolumes(ListVolumesRequest) returns (ListVolumesResponse) {}
  rpc ListPath(ListPathRequest) returns (ListPathResponse) {}
  rpc DeletePath(DeletePathRequest) returns (DeletePathResponse) {}
  rpc CopyPathStream(stream CopyPathRequest) returns (CopyPathResponse) {}
  rpc MovePath(MovePathRequest) returns (MovePathResponse) {}
}

message VolumeInstance {
  string id = 1;
  string name = 2;
  uint64 size = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string workspace_id = 6;
  string workspace_name = 7;
}

message GetOrCreateVolumeRequest {
  string name = 1;
}

message GetOrCreateVolumeResponse {
  bool ok = 1;
  string err_msg = 2;
  VolumeInstance volume = 3;
}

message PathInfo {
  string path = 1;
  uint64 size = 2;
  google.protobuf.Timestamp mod_time = 3;
  bool is_dir = 4;
}

message ListPathRequest {
  string path = 1;
}

message ListPathResponse {
  bool ok = 1;
  string err_msg = 2;
  repeated PathInfo path_infos = 3;
}

message DeletePathRequest {
  string path = 1;
}

message DeletePathResponse {
  bool ok = 1;
  string err_msg = 2;
  repeated string deleted = 3;
}

message CopyPathRequest {
  string path = 1;
  bytes content = 2;
}

message CopyPathResponse {
  bool ok = 1;
  string object_id = 2;
  string err_msg = 3;
}

message ListVolumesRequest {}

message ListVolumesResponse {
  bool ok = 1;
  string err_msg = 2;
  repeated VolumeInstance volumes = 3;
}

message MovePathRequest {
  string original_path = 1;
  string new_path = 2;
}

message MovePathResponse {
  bool ok = 1;
  string err_msg = 2;
  string new_path = 3;
}